--- a/main.ipynb
+++ b/main.ipynb
@@ -634,18 +634,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 726,
+   "execution_count": 730,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\nfrom sklearn.model_selection import StratifiedKFold\\nfrom sklearn.metrics import accuracy_score\\nimport numpy as np\\n\\ncv = StratifiedKFold(n_splits=5, shuffle=True)\\n\\nscores = []\\n\\n# Itere sobre cada dobra do cross-validation\\nfor split_treino, split_teste in cv.split(X, y):\\n    X_split_treino, X_split_teste = X.iloc[split_treino], X.iloc[split_teste]\\n    y_split_treino, y_split_teste = y.iloc[split_treino], y.iloc[split_teste]\\n\\n    # Treine a pipeline no conjunto de dados de treinamento\\n    pipe.fit(X_split_treino, y_split_treino)\\n\\n    # Faça previsões no conjunto de dados de teste\\n    y_pred = pipe.predict(X_split_teste)\\n\\n    # Calcule a acurácia\\n    score = accuracy_score(y_split_teste, y_pred)\\n    scores.append(score)\\n\\nprint(\"Média de acurácia:\", np.mean(scores))\\n'"
-      ]
-     },
-     "execution_count": 726,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média de acurácia: 0.9990730565154745\n"
+     ]
     }
    ],
    "source": [
