--- a/main.ipynb
+++ b/main.ipynb
@@ -605,13 +605,12 @@
     "from xgboost import XGBClassifier\n",
     "from imblearn.pipeline import Pipeline as imbPipeline\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "# criando uma pipeline de processos com oversampling, por isso é usado a Pipeline do ImbLearn\n",
     "# parâmetros do XGBClassifier definidos pela otimização bayesiana no fine tuning\n",
-    "pipe = imbPipeline(steps=[('OVERSAMPLING', SMOTE()), # SMOTE convergiu melhor que ADASYN\n",
-    "                          ('MinMaxScaler', MinMaxScaler()), \n",
-    "                          ('StandardScaler', StandardScaler()),\n",
+    "pipe = imbPipeline(steps=[('OVERSAMPLING', SMOTE()), # SMOTE convergiu melhor que ADASYN \n",
+    "                          ('MinMaxScaler', MinMaxScaler()),\n",
     "                          ('XGBClassifier', XGBClassifier(learning_rate=0.09518018573985505, min_child_weight=10, \n",
     "                                                          max_depth=10, colsample_bytree=0.5,\n",
     "                                                          gamma=0, scale_pos_weight=1, n_estimators=50))])\n",
